# prompt-tester

./: CLAUDE.md  README.md  crawler.py  pyproject.toml  requirements.txt  server.py
apps/fitco/: CLAUDE.md  ask.py  pyproject.toml  server.py
apps/fitco/eval/: runner.py
apps/fitco/profiles/: user_profile.json
apps/fitco/prompts/: fitting_v1.py
apps/fitco/static/: index.html
eval/: scorer.py
profiles/: 950319ad.json  dd45a12c.json  default.json
prompts/: personal_fitting.py
static/: index.html
