[project]
name = "fitco"
version = "0.1.0"
description = "AI 개인 피팅 어드바이저"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "openai>=1.30.0",
    "google-genai>=0.8.0",
    "size-crawler",
    "universal-size-crawler",
]

[tool.uv.sources]
size-crawler = { workspace = true }
universal-size-crawler = { workspace = true }
